# pyocyanin-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  corrected_feature_extrction.ipynb  data_augmentation.ipynb  feature_extraction.ipynb  model_training.ipynb  peak.py  pyproject.toml  voltammogram_signal.py
datasets/: Citiri DensiCheck.xlsx  Citiri DensiCheck_updated.xlsx  Data SensiBT - Pyo culturi 6 h + 12h + 24h + 36 h.xlsx  Date P.aeruginosa Clinic 788 + AB.xlsx  Date P.aeruginosa Clinic 788 + ATCC.xlsx  Date culturi + antibiotice.xlsx  NTG - viabilitate .xlsx  Standard calibration in culture media_extended.xlsx
vectorized/: core.csv  experimental.csv  extended.csv
